# VRScreenCap

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  manifest.yaml
.github/workflows/: rust.yml
src/: blit.wgsl  config.rs  conversions.rs  engine.rs  lib.rs  loaders.rs  macros.rs  main.rs  shader.wgsl  utils.rs
src/engine/: camera.rs  entity.rs  flat.rs  formats.rs  geometry.rs  input.rs  jitter.rs  screen.rs  space.rs  swapchain.rs  texture.rs  vr.rs
src/loaders/: blank_loader.rs  captrs_loader.rs  desktop_duplication_loader.rs  katanga_loader.rs
src/utils/: commands.rs  external_texture.rs  logging.rs  tray.rs  validation.rs
